test_scores/negative_dimers/features/P06733.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P06733.pkl.xz